# Search-system

./: CMakeLists.txt  README.md  libio.cppm  main.cpp  search_system.ui  settings.ini
core/entities/: CMakeLists.txt
core/entities/Database/: CMakeLists.txt
core/entities/Database/entities/: DbController.cpp  DbController.hpp  SQLexception.hpp
core/entities/Indexer/: CMakeLists.txt
core/entities/Indexer/entities/: Indexer.cpp  Indexer.hpp
core/entities/Ini_parser/: CMakeLists.txt
core/entities/Ini_parser/data/: Constants.hpp
core/entities/Ini_parser/entities/: Ini_parser.cpp  Ini_parser.hpp
core/entities/Ini_parser/exceptions/: ParserException.cpp  ParserException.hpp
core/entities/Model/: CMakeLists.txt
core/entities/Model/entities/: SearchHit.hpp  Search_hit_model.cpp  Search_hit_model.hpp
core/entities/UI/: CMakeLists.txt  Interface.hpp
